gql/y.output

state 0
	$accept: .start $end 

	tokIdent  shift 10
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 8
	tokLoad  shift 6
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	loadStatement  goto 4
	loadStatements  goto 2
	assignment  goto 7
	toplevelStatement  goto 5
	toplevelStatements  goto 3
	expr  goto 9
	term  goto 11
	block  goto 17
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  loadStatements.optionalSemicolon 
	start:  loadStatements.';' toplevelStatements optionalSemicolon 
	loadStatements:  loadStatements.';' loadStatement 
	optionalSemicolon: .    (9)

	';'  shift 31
	.  reduce 9 (src line 88)

	optionalSemicolon  goto 30

state 3
	start:  toplevelStatements.optionalSemicolon 
	toplevelStatements:  toplevelStatements.';' toplevelStatement 
	optionalSemicolon: .    (9)

	';'  shift 33
	.  reduce 9 (src line 88)

	optionalSemicolon  goto 32

state 4
	loadStatements:  loadStatement.    (11)

	.  reduce 11 (src line 91)


state 5
	toplevelStatements:  toplevelStatement.    (4)

	.  reduce 4 (src line 80)


state 6
	loadStatement:  tokLoad.tokString 

	tokString  shift 34
	.  error


state 7
	toplevelStatement:  assignment.    (6)

	.  reduce 6 (src line 83)


state 8
	toplevelStatement:  tokFunc.tokIdent '(' paramNameList ')' expr 
	expr:  tokFunc.'(' paramNameList ')' legacyFunctionBlock 

	tokIdent  shift 35
	'('  shift 36
	.  error


state 9
	toplevelStatement:  expr.    (8)
	expr:  expr.'(' paramList ')' 
	expr:  expr.'|' expr 
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokEQEQ expr 
	expr:  expr.tokEQOrRhsNull expr 
	expr:  expr.tokEQOrLhsNull expr 
	expr:  expr.tokEQOrBothNull expr 
	expr:  expr.tokNE expr 
	expr:  expr.'>' expr 
	expr:  expr.tokGEQ expr 
	expr:  expr.'<' expr 
	expr:  expr.tokLEQ expr 
	expr:  expr.'.' tokIdent 

	tokOrOr  shift 39
	tokAndAnd  shift 40
	tokEQEQ  shift 46
	tokEQOrRhsNull  shift 47
	tokEQOrLhsNull  shift 48
	tokEQOrBothNull  shift 49
	tokNE  shift 50
	tokLEQ  shift 54
	tokGEQ  shift 52
	'>'  shift 51
	'<'  shift 53
	'|'  shift 38
	'+'  shift 41
	'-'  shift 42
	'*'  shift 43
	'/'  shift 44
	'%'  shift 45
	'.'  shift 55
	'('  shift 37
	.  reduce 8 (src line 85)


state 10
	assignment:  tokIdent.tokAssign expr 
	term:  tokIdent.    (57)

	tokAssign  shift 56
	.  reduce 57 (src line 151)


state 11
	expr:  term.    (22)

	.  reduce 22 (src line 112)


state 12
	expr:  '-'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 57
	term  goto 11
	block  goto 17

state 13
	expr:  '!'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 60
	term  goto 11
	block  goto 17

state 14
	expr:  '|'.paramNameList '|' expr 
	paramNameList: .    (76)

	tokIdent  shift 62
	.  reduce 76 (src line 177)

	paramNameList  goto 61

state 15
	expr:  tokCond.'(' expr ',' expr ',' expr ')' 

	'('  shift 63
	.  error


state 16
	expr:  tokIf.expr expr tokElse expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 64
	term  goto 11
	block  goto 17

state 17
	expr:  block.    (48)

	.  reduce 48 (src line 138)


state 18
	term:  tokInt.    (49)

	.  reduce 49 (src line 143)


state 19
	term:  tokFloat.    (50)

	.  reduce 50 (src line 144)


state 20
	term:  tokNull.    (51)

	.  reduce 51 (src line 145)


state 21
	term:  tokString.    (52)

	.  reduce 52 (src line 146)


state 22
	term:  tokDateTime.    (53)

	.  reduce 53 (src line 147)


state 23
	term:  tokDuration.    (54)

	.  reduce 54 (src line 148)


state 24
	term:  tokBool.    (55)

	.  reduce 55 (src line 149)


state 25
	term:  tokChar.    (56)

	.  reduce 56 (src line 150)


state 26
	term:  '$'.tokIdent 

	tokIdent  shift 65
	.  error


state 27
	term:  '&'.tokIdent 

	tokIdent  shift 66
	.  error


state 28
	block:  '{'.blockStatements ';' expr optionalSemicolon '}' 
	term:  '{'.structFields '}' 

	tokIdent  shift 73
	tokRegex  shift 75
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 72
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	assignment  goto 71
	blockStatement  goto 69
	blockStatements  goto 67
	expr  goto 74
	term  goto 11
	block  goto 17
	structField  goto 70
	structFields  goto 68

state 29
	term:  '('.expr ')' 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 76
	term  goto 11
	block  goto 17

state 30
	start:  loadStatements optionalSemicolon.    (1)

	.  reduce 1 (src line 66)


state 31
	start:  loadStatements ';'.toplevelStatements optionalSemicolon 
	optionalSemicolon:  ';'.    (10)
	loadStatements:  loadStatements ';'.loadStatement 

	tokIdent  shift 10
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 8
	tokLoad  shift 6
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  reduce 10 (src line 89)

	loadStatement  goto 78
	assignment  goto 7
	toplevelStatement  goto 5
	toplevelStatements  goto 77
	expr  goto 9
	term  goto 11
	block  goto 17

state 32
	start:  toplevelStatements optionalSemicolon.    (3)

	.  reduce 3 (src line 73)


state 33
	toplevelStatements:  toplevelStatements ';'.toplevelStatement 
	optionalSemicolon:  ';'.    (10)

	tokIdent  shift 10
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 8
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  reduce 10 (src line 89)

	assignment  goto 7
	toplevelStatement  goto 79
	expr  goto 9
	term  goto 11
	block  goto 17

state 34
	loadStatement:  tokLoad tokString.    (13)

	.  reduce 13 (src line 94)


state 35
	toplevelStatement:  tokFunc tokIdent.'(' paramNameList ')' expr 

	'('  shift 80
	.  error


state 36
	expr:  tokFunc '('.paramNameList ')' legacyFunctionBlock 
	paramNameList: .    (76)

	tokIdent  shift 62
	.  reduce 76 (src line 177)

	paramNameList  goto 81

state 37
	expr:  expr '('.paramList ')' 
	paramList: .    (62)

	tokIdent  shift 86
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  reduce 62 (src line 157)

	expr  goto 85
	term  goto 11
	block  goto 17
	paramList  goto 82
	positionalParamList  goto 83
	namedParamList  goto 84

state 38
	expr:  expr '|'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 87
	term  goto 11
	block  goto 17

state 39
	expr:  expr tokOrOr.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 88
	term  goto 11
	block  goto 17

state 40
	expr:  expr tokAndAnd.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 89
	term  goto 11
	block  goto 17

state 41
	expr:  expr '+'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 90
	term  goto 11
	block  goto 17

state 42
	expr:  expr '-'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 91
	term  goto 11
	block  goto 17

state 43
	expr:  expr '*'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 92
	term  goto 11
	block  goto 17

state 44
	expr:  expr '/'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 93
	term  goto 11
	block  goto 17

state 45
	expr:  expr '%'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 94
	term  goto 11
	block  goto 17

state 46
	expr:  expr tokEQEQ.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 95
	term  goto 11
	block  goto 17

state 47
	expr:  expr tokEQOrRhsNull.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 96
	term  goto 11
	block  goto 17

state 48
	expr:  expr tokEQOrLhsNull.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 97
	term  goto 11
	block  goto 17

state 49
	expr:  expr tokEQOrBothNull.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 98
	term  goto 11
	block  goto 17

state 50
	expr:  expr tokNE.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 99
	term  goto 11
	block  goto 17

state 51
	expr:  expr '>'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 100
	term  goto 11
	block  goto 17

state 52
	expr:  expr tokGEQ.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 101
	term  goto 11
	block  goto 17

state 53
	expr:  expr '<'.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 102
	term  goto 11
	block  goto 17

state 54
	expr:  expr tokLEQ.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 103
	term  goto 11
	block  goto 17

state 55
	expr:  expr '.'.tokIdent 

	tokIdent  shift 104
	.  error


state 56
	assignment:  tokIdent tokAssign.expr 

	tokIdent  shift 59
	tokInt  shift 18
	tokString  shift 21
	tokBool  shift 24
	tokFloat  shift 19
	tokChar  shift 25
	tokDateTime  shift 22
	tokDuration  shift 23
	tokNull  shift 20
	'|'  shift 14
	'{'  shift 28
	'$'  shift 26
	'&'  shift 27
	tokFunc  shift 58
	tokCond  shift 15
	tokIf  shift 16
	'-'  shift 12
	'('  shift 29
	'!'  shift 13
	.  error

	expr  goto 105
	term  goto 11
	block  goto 17

state 57
	expr:  expr.'(' paramList ')' 
	expr:  expr.'|' expr 
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokEQEQ expr 
	expr:  expr.tokEQOrRhsNull expr 
	expr:  expr.tokEQOrLhsNull expr 
	expr:  expr.tokEQOrBothNull expr 
	expr:  expr.tokNE expr 
	expr:  expr.'>' expr 
	expr:  expr.tokGEQ expr 
	expr:  expr.'<' expr 
	expr:  expr.tokLEQ expr 
	expr:  '-' expr.    (41)
	expr:  expr.'.' tokIdent 

	'.'  shift 55
	'('  shift 37
	.  reduce 41 (src line 131)


state 58
	expr:  tokFunc.'(' paramNameList ')' legacyFunctionBlock 

	'('  shift 36
	.  error


state 59
	term:  tokIdent.    (57)

	.  reduce 57 (src line 151)


state 60
	expr:  expr.'(' paramList ')' 
	expr:  expr.'|' expr 
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.tokEQEQ expr 
	expr:  expr.tokEQOrRhsNull expr 
	expr:  expr.tokEQOrLhsNull expr 
	expr:  expr.tokEQOrBothNull expr 
	expr:  expr.tokNE expr 
	expr:  expr.'>' expr 
	expr:  expr.tokGEQ expr 
	expr:  expr.'<' expr 
	expr:  expr.tokLEQ expr 
	expr:  '!' expr.    (42)
	expr:  expr.'.' tokIdent 

	'.'  shift 55
	'('  shift 37
	.  reduce 42 (src line 132)

